language/move-lang/tests/move_check/expansion/type_arguments_on_field_access.exp
error: 

   ┌── tests/move_check/expansion/type_arguments_on_field_access.move:6:17 ───
   │
 6 │         x.f<u64>;
   │                 - Expected an expression term
   │                 ^ Unexpected ';'
   │

